2011-01-10  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/network/Server.h: Add handler data member to Server.
	* src/network/Server.cpp: Likewise.

	* include/network/Handler.h: Inherit from BaseHandler.

	* include/network/Makefile.am: Add BaseHandler.h.

	* include/network/BaseHandler.h: New file.

	* src/dmcs/StreamingDMCS.cpp: Point to the right message queue.

	* include/network/ThreadFactory.h: Give each neighbor thread an
	index to find the right message queue.
	* src/network/ThreadFactory.cpp: Likewise.

	* include/dmcs/StreamingForwardMessage.h: Use Conflict instead of
	BeliefState for conflict.
	* src/dmcsc.cpp: Likewise.

2011-01-10  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/network/Handler.tcc (do_local_job): Create ConcurrentMessageQueueFactory reference.

2011-01-09  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/solver/RelSatSolver.cpp: Fix Segfault.

	* include/network/Handler.h: Bring first_call flag along.
	* include/network/Handler.tcc: Likewise.

	* include/dmcs/StreamingDMCS.h: Use ConcurrentMessageQueue thingy.
	* src/solver/RelSatSolver.cpp: Likewise.
	* src/network/ThreadFactory.cpp: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* include/solver/RelSatSolver.h: Likewise.
	* include/network/Handler.tcc: Likewise.
	* include/network/Handler.h: Likewise.


	* include/network/ConcurrentMessageQueueFactory.h: Likewise.

	* include/solver/SatSolverFactory.h: Use local_sig instead of mixed_sig.
	* src/dmcs/StreamingDMCS.cpp: Likewise.

	* include/solver/RelSatSolver.h: Push input into relsat.
	* src/solver/RelSatSolver.cpp: Likewise.

	* include/network/Handler.h: Initialize threads and message
	gateways once.
	* include/network/Handler.tcc: Likewise.

	* include/mcs/BeliefState.h: Add vector of pointers of BeliefState.

	* include/dmcs/StreamingDMCS.h: Make use of pack_size.
	* include/dmcs/StreamingForwardMessage.h: Likewise.
	* include/network/ThreadFactory.h: Likewise.
	* src/network/ThreadFactory.cpp: Likewise.